refactored code, as well as added come "constructive" comments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
 
 # IntelliJ project files
 .idea
@@ -20,3 +18,5 @@ gen
 hs_err_pid*
 
 
+
+src/tuc/ds/bptree/TreeNodeEntry.java
